force-app/main/default/objects/Participant_Enrollment__c/fields/Randomized_Date__c.field-meta.xml
<CustomField>
    <fullName>Randomized_Date__c</fullName>
    <description>HCP/Physician Participant Randomized Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HCP/Physician Participant Randomized Date</inlineHelpText>
    <label>Randomized (Date)</label>
    <type>Date</type>
</CustomField>