force-app/main/default/objects/Participant_Enrollment__c/fields/Re_consent__c.field-meta.xml
<CustomField>
    <fullName>Re_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-consent</label>
    <type>Checkbox</type>
</CustomField>