force-app/main/default/objects/Participant_Enrollment__c/fields/Referral_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Referral_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Completed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Enrollments (Pre-Screening  Completed by)</relationshipLabel>
    <relationshipName>Participant_Enrollments1</relationshipName>

    <type>Lookup</type>
</CustomField>