force-app/main/default/objects/Participant_Enrollment__c/fields/Referral_Completedby_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Completedby_Name__c</fullName>
    <description>Referral Completed by</description>
    <formula>Referral_Completed_by__r.FirstName &amp; &quot; &quot; &amp;
Referral_Completed_by__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Referral Completed by</inlineHelpText>
    <label>Referral Completed by</label>
    <type>Text</type>
</CustomField>