force-app/main/default/objects/Participant_Enrollment__c/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Referral ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>