force-app/main/default/objects/Participant_Enrollment__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>HCP/Physician Participant Referral Source</description>
    <inlineHelpText>HCP/Physician Participant Referral Source</inlineHelpText>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>HCP Prescreen Log</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>ePR</fullName>
            </value>
            <value>
                <fullName>ACOE</fullName>
            </value>
            <value>
                <fullName>3rd_Party</fullName>
                <label>3rd Party</label>
            </value>
            <value>
                <fullName>Autocruitment</fullName>
            </value>
            <value>
                <fullName>23andMe</fullName>
            </value>
            <value>
                <fullName>IQVIA registry</fullName>
            </value>
            <value>
			 <fullName>Ciitizen</fullName>
                </value>
            <value>
                <fullName>MassiveBio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>