force-app/main/default/objects/Participant_Enrollment__c/fields/Referral_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_ID__c</fullName>
    <formula>IF( ISPICKVAL(Referral_Source__c, &#39;HCP&#39;),  CASESAFEID(HCP_Contact_HCPEnroll__c),  IF(ISPICKVAL(Referral_Source__c, &#39;PI&#39;),  CASESAFEID(PI_Contact__c) ,  IF(ISPICKVAL(Referral_Source__c, &#39;Ciitizen&#39;), &#39;Ciitizen&#39; , &#39;Digital Recruitment&#39;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Source ID</label>
    <type>Text</type>
</CustomField>