force-app/main/default/objects/Participant_Enrollment__c/fields/Referred__c.field-meta.xml
<CustomField>
    <fullName>Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Potential Participant been successfully referred to a Site / PI?</inlineHelpText>
    <label>Referred</label>
    <type>Checkbox</type>
</CustomField>