force-app/main/default/objects/Participant_Enrollment__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <label>Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Database</fullName>
            </value>
            <value>
                <fullName>External Physician</fullName>
            </value>
            <value>
                <fullName>Recruitment Campaign</fullName>
            </value>
            <value>
                <fullName>Virtual Trial Campaign</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>