force-app/main/default/objects/Participant_Enrollment__c/fields/Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Potential Participant referred to a Site / PI</inlineHelpText>
    <label>Referred Date</label>
    <type>Date</type>
</CustomField>