force-app/main/default/objects/Participant_Enrollment__c/fields/RequestedMedicalRecords__c.field-meta.xml
<CustomField>
    <fullName>RequestedMedicalRecords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RequestedMedicalRecords</label>
    <type>DateTime</type>
</CustomField>