force-app/main/default/objects/Participant_Enrollment__c/fields/RP_Site_Selected__c.field-meta.xml
<CustomField>
    <fullName>RP_Site_Selected__c</fullName>
    <label>RP Site Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>