force-app/main/default/objects/Participant_Enrollment__c/fields/Screening__c.field-meta.xml
<CustomField>
    <fullName>Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the Potential Participant pass screening?</inlineHelpText>
    <label>Screening</label>
    <type>Checkbox</type>
</CustomField>