force-app/main/default/objects/Participant_Enrollment__c/fields/Screening_Date__c.field-meta.xml
<CustomField>
    <fullName>Screening_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date screening was completed</inlineHelpText>
    <label>Screening Date</label>
    <type>Date</type>
</CustomField>