force-app/main/default/objects/Participant_Enrollment__c/fields/Screening_ID__c.field-meta.xml
<CustomField>
    <fullName>Screening_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Obtain the Interactive Voice Response System (IVRS) Number/ Interactive Web Response System (IWRS) Number for the  participant</inlineHelpText>
    <label>Screening ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>