force-app/main/default/objects/Participant_Enrollment__c/fields/SenttoCompleteConsent__c.field-meta.xml
<CustomField>
    <fullName>SenttoCompleteConsent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent to Complete Consent</label>
    <type>DateTime</type>
</CustomField>