force-app/main/default/objects/Participant_Enrollment__c/fields/Show_Referring_Provider__c.field-meta.xml
<CustomField>
    <fullName>Show_Referring_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Referring Provider</label>
    <type>Checkbox</type>
</CustomField>