force-app/main/default/objects/Participant_Enrollment__c/fields/Site_Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Site_Communication_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Communication Preference</label>
    <type>Checkbox</type>
</CustomField>