force-app/main/default/objects/Participant_Enrollment__c/fields/Site_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date and time the site was selected</inlineHelpText>
    <label>Site Date</label>
    <type>Date</type>
</CustomField>