force-app/main/default/objects/Participant_Enrollment__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referring Provider</fullName>
            </value>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Digital Recruitment</fullName>
            </value>
			<value>
                <fullName>Ciitizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>