force-app/main/default/objects/Participant_Enrollment__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <formula>IF(OR(
ISPICKVAL(Participant_Status__c ,&#39;Identified&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Contacted&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Consulted&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Interested&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Pre-Eligibility&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Opt-In Refer&#39;)), 
&#39;In Referral Process&#39;, 
IF(OR(
ISPICKVAL(Participant_Status__c ,&#39;Failed Referral&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Failed to Enroll&#39;)),
&#39;Failed to Refer&#39;,
IF(OR(
ISPICKVAL(Participant_Status__c ,&#39;New Referral&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Eligible&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Visit Completed&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Informed Consent&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Screening&#39;)),
&#39;In Enrollment Process&#39;,
IF(OR(
ISPICKVAL(Participant_Status__c ,&#39;Enrolled&#39;),
ISPICKVAL(Participant_Status__c ,&#39;Randomized&#39;)),
&#39;Enrolled&#39;, &#39;Other&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Category</label>

    <type>Text</type>
</CustomField>