force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Artificial_Voice_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_Artificial_Voice_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Artificial Voice Consent</label>
    <type>Checkbox</type>
</CustomField>