force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Artificial_Voice_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Artificial_Voice_Consent_Time__c</fullName>
    <label>Study Artificial Voice Consent Time</label>
    <type>DateTime</type>
</CustomField>