force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Assisted_Dialing_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Assisted_Dialing_Consent_Time__c</fullName>
    <label>Study Assisted Dialing Consent Time</label>
    <type>DateTime</type>
</CustomField>