force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Direct_Mail_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_Direct_Mail_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Direct Mail Consent</label>
    <type>Checkbox</type>
</CustomField>