force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Direct_Mail_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Direct_Mail_Consent_Time__c</fullName>
    <label>Study Direct Mail Consent Time</label>
    <type>DateTime</type>
</CustomField>