force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Email_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Email_Consent_Time__c</fullName>
    <label>Study Email Consent Time</label>
    <type>DateTime</type>
</CustomField>