force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Hub_Log__c.field-meta.xml
<CustomField>
    <fullName>Study_Hub_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Hub Log</label>
    <referenceTo>Integration_Log__c</referenceTo>
    <relationshipLabel>Study_Hub Integration Enrollments</relationshipLabel>
    <relationshipName>Study_Hub_Integration_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>