force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Name__c</fullName>
    <formula>Study_Site__r.Clinical_Trial_Profile__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Name</label>
    <type>Text</type>
</CustomField>