force-app/main/default/objects/Participant_Enrollment__c/fields/Study_PI_Storage_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_PI_Storage_Consent_Time__c</fullName>
    <label>Study PI Storage Consent Time</label>
    <type>DateTime</type>
</CustomField>