force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Pre_recorded_Calls_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Pre_recorded_Calls_Consent_Time__c</fullName>
    <label>Study Pre-recorded Calls Consent Time</label>
    <type>DateTime</type>
</CustomField>