force-app/main/default/objects/Participant_Enrollment__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Participant Enrollments</relationshipLabel>
    <relationshipName>Participant_Profile</relationshipName>

    <type>Lookup</type>
</CustomField>