force-app/main/default/objects/Participant_Enrollment__c/fields/Subject_GUID__c.field-meta.xml
<CustomField>
    <fullName>Subject_GUID__c</fullName>
    <description>eCOA Subject GUID</description>
    <inlineHelpText>required for creating subject in eCOA</inlineHelpText>
    <label>Subject GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>