force-app/main/default/objects/Participant_Enrollment__c/fields/SubjectId__c.field-meta.xml
<CustomField>
    <fullName>SubjectId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubjectId</label>
    <length>225</length>
    <type>Text</type>
</CustomField>