force-app/main/default/objects/Participant_Enrollment__c/fields/Succesfully_Re_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Succesfully_Re_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Succesfully Re-Engaged</label>
    <type>Checkbox</type>
</CustomField>