force-app/main/default/objects/Participant_Enrollment__c/fields/Terms_and_Conditions_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Accepted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terms and Conditions Accepted Date</label>

    <type>Date</type>
</CustomField>