force-app/main/default/objects/Participant_Enrollment__c/fields/To_permit_IQVIA_to_contact_about_study__c.field-meta.xml
<CustomField>
    <fullName>To_permit_IQVIA_to_contact_about_study__c</fullName>
    <defaultValue>true</defaultValue>
    <label>To permit IQVIA to contact about study</label>
    <type>Checkbox</type>
</CustomField>