force-app/main/default/objects/Participant_Enrollment__c/fields/To_permit_IQVIA_to_contact_the_participa__c.field-meta.xml
<CustomField>
    <fullName>To_permit_IQVIA_to_contact_the_participa__c</fullName>
    <defaultValue>true</defaultValue>
    <label>To permit IQVIA to contact the participa</label>
    <type>Checkbox</type>
</CustomField>