force-app/main/default/objects/Participant_Enrollment__c/fields/UCPM_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>UCPM_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UCPM Error Message</label>
    <type>TextArea</type>
</CustomField>