force-app/main/default/objects/Participant_Enrollment__c/fields/UCPM_Status__c.field-meta.xml
<CustomField>
    <fullName>UCPM_Status__c</fullName>
    <label>UCPM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>