force-app/main/default/objects/Participant_Enrollment__c/fields/Unique_HumanId__c.field-meta.xml
<CustomField>
    <fullName>Unique_HumanId__c</fullName>
    <formula>IF( ISBLANK(Referral_ID__c) , Name  , Referral_ID__c )</formula>
    <label>Unique_HumanId</label>
    <type>Text</type>
</CustomField>