force-app/main/default/objects/Participant_Enrollment__c/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>utm_medium</label>
    <length>75</length>
    <type>Text</type>
</CustomField>