force-app/main/default/objects/Participant_Enrollment__c/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>utm_source</label>
    <length>75</length>
    <type>Text</type>
</CustomField>