force-app/main/default/objects/Participant_Enrollment__c/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>utm_term</label>
    <length>75</length>
    <type>Text</type>
</CustomField>