force-app/main/default/objects/Participant_Enrollment__c/fields/utmz__c.field-meta.xml
<CustomField>
    <fullName>utmz__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>utmz</label>
    <length>75</length>
    <type>Text</type>
</CustomField>