force-app/main/default/objects/Participant_Enrollment__c/fields/Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Visit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the Potential Participant show up to the scheduled visit?</inlineHelpText>
    <label>Visit Completed</label>

    <type>Checkbox</type>
</CustomField>