force-app/main/default/objects/Participant_Enrollment__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Plan</label>
    <referenceTo>Visit_Plan__c</referenceTo>
    <relationshipLabel>Participant Enrollments</relationshipLabel>
    <relationshipName>Participant_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>