force-app/main/default/objects/Participant_Enrollment__c/fields/Visit_Results_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Visit_Results_Opt_In__c</fullName>
    <label>Visit Results Opt In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitals</fullName>
            </value>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Biomarkers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>