force-app/main/default/objects/Participant_Enrollment__c/fields/Washout_Run_In_Applies__c.field-meta.xml
<CustomField>
    <fullName>Washout_Run_In_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Washout/Run In Applies</label>
    <type>Checkbox</type>
</CustomField>