force-app/main/default/objects/Participant_Enrollment__c/fields/YOB__c.field-meta.xml
<CustomField>
    <fullName>YOB__c</fullName>
    <label>YOB</label>
    <length>4</length>
    <type>Text</type>
</CustomField>