force-app/main/default/objects/Participant_Enrollment__c/validationRules/HCP_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>HCP_On_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND( INCLUDES(  HCP__r.HCP_Referral_Source__c , &quot;On Hold&quot;), (ISPICKVAL(Referral_Source__c, &quot;ePR&quot;)= FALSE))</errorConditionFormula>
    <errorMessage>HCP is currently On Hold</errorMessage>
</ValidationRule>