force-app/main/default/objects/Participant_Enrollment__c/validationRules/InitialVisitOccurredDate_InFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>InitialVisitOccurredDate_InFuture</fullName>
    <active>true</active>
    <description>Initial Visit Occurred Date should all allow present and past dates only.</description>
    <errorConditionFormula>Initial_visit_occurred_date__c &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Initial Visit Occurred Date cannot be future date.</errorMessage>
</ValidationRule>