force-app/main/default/objects/Participant_Enrollment__c/validationRules/InitialVisitScheduledDate_InPast.validationRule-meta.xml
<ValidationRule>
    <fullName>InitialVisitScheduledDate_InPast</fullName>
    <active>true</active>
    <description>Initial Visit Scheduled Date should allow present and future dates only.</description>
    <errorConditionFormula>ISCHANGED(Initial_visit_scheduled_date__c ) &amp;&amp; Initial_visit_scheduled_date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Initial Visit Scheduled Date cannot be in the past</errorMessage>
</ValidationRule>