force-app/main/default/objects/Participant_Enrollment__c/validationRules/Participant_Workflow_Final_Step_on_CTP.validationRule-meta.xml
<ValidationRule>
    <fullName>Participant_Workflow_Final_Step_on_CTP</fullName>
    <active>true</active>
    <description>If Participant Status is updated to ‘Enrollment Success’ or &#39;Randomization Success&#39; on Participant Enrollment record, verify that Participant Workflow Final Step = Enrollment or Randomization on CTP. If not, then display error message</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &#39;IQVIA Customer Community Plus Login User&#39;,
OR(
AND(ISPICKVAL(Participant_Status__c, &#39;Enrollment Success&#39;),
TEXT(Clinical_Trial_Profile__r.Participant_Workflow_Final_Step__c) &lt;&gt; &#39;Enrollment&#39;),
AND(ISPICKVAL(Participant_Status__c, &#39;Randomization Success&#39;),
TEXT(Clinical_Trial_Profile__r.Participant_Workflow_Final_Step__c) &lt;&gt; &#39;Randomization&#39;)
)
)</errorConditionFormula>
    <errorMessage>The selected Participant Status is not compatible with the Participant Workflow Final Step configured on the Clinical Trial Profile. Please select an appropriate status.</errorMessage>
</ValidationRule>