force-app/main/default/objects/Participant_Enrollment__c/validationRules/Revisit_Date_is_available.validationRule-meta.xml
<ValidationRule>
    <fullName>Revisit_Date_is_available</fullName>
    <active>true</active>
    <description>Revisit Date is editable if Washout/Run In Applies marks as selected</description>
    <errorConditionFormula>AND(
ISCHANGED(Revisit_Date__c),
Washout_Run_In_Applies__c=FALSE)</errorConditionFormula>
    <errorMessage>Revisit Date is available only if Washout/Run In Applies is marked</errorMessage>
</ValidationRule>