force-app/main/default/objects/Participant_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Participant_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Participant__c</columns>
    <columns>Participant_Name__c</columns>
    <columns>Patient_ID__c</columns>
    <columns>Referral_Source__c</columns>
    <columns>Study_Site__c</columns>
    <columns>Study__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>