force-app/main/default/objects/Participant_Enrollment__c/listViews/Participants_by_Stage.listView-meta.xml
<ListView>
    <fullName>Participants_by_Stage</fullName>
    <columns>NAME</columns>
    <columns>Referral_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>Participants by Stage</label>
</ListView>